adjust css to fix the horizontal scroll bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,3 @@
-body {
-      padding: 2px;
-  }
-
-
 .logo header-text{
     display:inline-block;
 }
@@ -49,14 +44,13 @@ body {
 
 
 .container {
-  width=90%;
   margin-left: auto;
   margin-right: auto;
 }
 
 
 .main {
-  width:100%;
+  width:95%;
   padding:10px;
 
 }
